connect with online db

--- a/ServerApp/appsettings.json
+++ b/ServerApp/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "ConnStr": "Server=66.165.248.146;Database=Integrations;User Id=ahsanzahid948;Password=!aA03145838932;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "ConnStr": "Server=66.165.248.146;Database=Inregrations;User Id=ahsanzahid948;Password=!aA03145838932;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
     "LocalConnStr": "Server=DESKTOP-HF3NEC4;Database=Integrations;Integrated Security=true;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "AllowedHosts": "*",
